webapp/.old/kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web
  name: web
spec:
  ports:
    - port: 80
      targetPort: 8000
  selector:
    app: web
status:
  loadBalancer: {}
